--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/rohit-ahire-63b10118b">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/rohitah07002209">Twitter</a>
+    <a class="footer-link" href="https://rohitahire4561.github.io/PersonalWeb/">Website</a>
     <p>© Rohit Ahire.</p>
   </div>
 
