--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h2>Get In Touch</h2>
       <h3>If you want to develop your own website.</h3>
       <p class="contact-message">If you have any business and you want to bring that buisness online,think you need my help with something or just fancy saying hey, then get in touch.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:ahirerohit556@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
